--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -18,12 +17,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-=======
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -127,4 +125,3 @@ dist
 
 # TernJS port file
 .tern-port
->>>>>>> 9036fea2b55080673e407a5cd54cb8c19c7cd1e2
